--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         }
 
         if (language.indexOf('fr') > -1) {
-            document.location.href = 'fr/accueil.html';
+            document.location.href = 'fr/accueil/accueil.html';
         } else if (language.indexOf('cn') > -1) {
-            document.location.href = 'cn/accueil.html';
+            document.location.href = 'cn/accueil/accueil.html';
         } else {
-            document.location.href = 'en/accueil.html';
+            document.location.href = 'en/accueil/accueil.html';
         }
         </script>
     </head>
